sparks fix on mobile scroll

--- a/calc.css
+++ b/calc.css
@@ -165,4 +165,5 @@ input[type=number] {
     height: 100%;
     z-index: 98;
     pointer-events: none;
+    background-color: black;
 }
